--- a/package.xml
+++ b/package.xml
@@ -10,10 +10,16 @@
   <email>krakjoe@php.net</email>
   <active>yes</active>
  </lead>
- <date>2013-03-27</date>
+ <developer>
+  <name>Anatol Belski</name>
+  <user>ab</user>
+  <email>ab@php.net</email>
+  <active>yes</active>
+ </developer>
+ <date>2013-xx-xx</date>
  <time>03:10:00</time>
  <version>
-  <release>4.0.0</release>
+  <release>4.0.1</release>
   <api>4.0.0</api>
  </version>
  <stability>
@@ -22,10 +28,8 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  All opcode caching abilities removed
-  The default locking is now rwlocks
-  APCu API installed in build environment
-  Please see TECHNOTES/README.md
+  - Expose to userland whether APCu is compiled with the APC compatibility.
+    See the APCU_APC_FULL_BC constant. (Anatol)
  </notes>
  <contents>
   <dir name="/">
@@ -126,5 +130,29 @@
   </required>
  </dependencies>
  <providesextension>apcu</providesextension>
- <extsrcrelease />
+ <extsrcrelease>
+  <configureoption name="enable-apc-bc" default="yes" prompt="Enable full APC compatibility" />
+  <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
+ </extsrcrelease>
+ <changelog>
+  <release>
+   <date>2013-03-27</date>
+   <time>03:10:00</time>
+   <version>
+    <release>4.0.0</release>
+    <api>4.0.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+  All opcode caching abilities removed
+  The default locking is now rwlocks
+  APCu API installed in build environment
+  Please see TECHNOTES/README.md
+   </notes>
+  </release>
+ </changelog>
 </package>
