--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,7 @@
  <notes>
   - Expose to userland whether APCu is compiled with the APC compatibility.
     See the APCU_APC_FULL_BC constant. (Anatol)
+  - Fixed bin dump producing garbage data in multithreaded env. (Anatol)
  </notes>
  <contents>
   <dir name="/">
