--- a/package.xml
+++ b/package.xml
@@ -28,6 +28,9 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
+  - Fix crash in cli on apc_store where enable_cli=0
+  - Testing eval serializers
+  - Change apc_* to apcu_* in apc.php
   - Expose to userland whether APCu is compiled with the APC compatibility.
     See the APCU_APC_FULL_BC constant. (Anatol)
   - Fixed bin dump producing garbage data in multithreaded env. (Anatol)
