--- a/package.xml
+++ b/package.xml
@@ -20,7 +20,7 @@
  <time>03:10:00</time>
  <version>
   <release>4.0.1</release>
-  <api>4.0.0</api>
+  <api>4.0.1</api>
  </version>
  <stability>
   <release>beta</release>
@@ -31,6 +31,7 @@
   - Fix crash in cli on apc_store where enable_cli=0
   - Testing eval serializers
   - Change apc_* to apcu_* in apc.php
+  - Fix exports in API
   - Expose to userland whether APCu is compiled with the APC compatibility.
     See the APCU_APC_FULL_BC constant. (Anatol)
   - Fixed bin dump producing garbage data in multithreaded env. (Anatol)
