set the release date for 4.0.1

--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@
   <email>ab@php.net</email>
   <active>yes</active>
  </developer>
- <date>2013-xx-xx</date>
+ <date>2013-04-28</date>
  <time>03:10:00</time>
  <version>
   <release>4.0.1</release>
