--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,7 @@
  <notes>
   - Fixed bug #15 APC compatibility option broken. (Anatol)
   - Fixed bug #20 APCu's APCIterator constructor is not compatable with APC. (Anatol)
+  - Fixed resource leak when data preload fails. (Anatol)
  </notes>
  <contents>
   <dir name="/">
