--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,7 @@
   - Fixed bug #15 APC compatibility option broken. (Anatol)
   - Fixed bug #20 APCu's APCIterator constructor is not compatable with APC. (Anatol)
   - Fixed resource leak when data preload fails. (Anatol)
+  - Fixed issue #29 php_apcu.dll does not load anymore under X64. (Anatol)
  </notes>
  <contents>
   <dir name="/">
