--- a/package.xml
+++ b/package.xml
@@ -16,11 +16,11 @@
   <email>ab@php.net</email>
   <active>yes</active>
  </developer>
- <date>2014-03-01</date>
- <time>08:00:00</time>
+ <date>2014-06-11</date>
+ <time>07:00:00</time>
  <version>
-  <release>4.0.4</release>
-  <api>4.0.4</api>
+  <release>4.0.5</release>
+  <api>4.0.5</api>
  </version>
  <stability>
   <release>beta</release>
@@ -28,8 +28,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  - Fix deadlocking due to destroyed locks
-  - Fix various compatibility bugs
+  - fix compile with 5.6 beta
  </notes>
  <contents>
   <dir name="/">
