--- a/package.xml
+++ b/package.xml
@@ -16,11 +16,11 @@
   <email>ab@php.net</email>
   <active>yes</active>
  </developer>
- <date>2014-06-11</date>
- <time>07:00:00</time>
+ <date>2014-06-12</date>
+ <time>14:00:00</time>
  <version>
-  <release>4.0.5</release>
-  <api>4.0.5</api>
+  <release>4.0.6</release>
+  <api>4.0.6</api>
  </version>
  <stability>
   <release>beta</release>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  - fix compile with 5.6 beta
+  - fix issues with stddef inclusion causing compilation issue
  </notes>
  <contents>
   <dir name="/">
