--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,12 @@
   <email>ab@php.net</email>
   <active>yes</active>
  </developer>
+ <developer>
+  <name>Remi Collet</name>
+  <user>remi</user>
+  <email>remi@php.net</email>
+  <active>yes</active>
+ </developer>
  <date>2014-10-11</date>
  <time>18:00:00</time>
  <version>
