--- a/package.xml
+++ b/package.xml
@@ -70,6 +70,7 @@
     <file name="iterator_003.phpt" role="test" />
     <file name="iterator_004.phpt" role="test" />
     <file name="iterator_005.phpt" role="test" />
+    <file name="iterator_005_bc.phpt" role="test" />
     <file name="iterator_006.phpt" role="test" />
     <file name="iterator_007.phpt" role="test" />
     <file name="iterator_008_bc.phpt" role="test" />
