--- a/package.xml
+++ b/package.xml
@@ -40,6 +40,7 @@
 - add APCuIterator without cache argument
 - drop apcu_bin_* functions
 - add apcu_entry(key, callback, ttl) function
+- fix race on refcount of entry when using rwlocks (or on windows)
  </notes>
  <contents>
   <dir name="/">
