--- a/package.xml
+++ b/package.xml
@@ -25,7 +25,7 @@
  <date>2014-10-11</date>
  <time>18:00:00</time>
  <version>
-  <release>5.1.0dev</release>
+  <release>5.1.0</release>
   <api>5.1.0</api>
  </version>
  <stability>
