--- a/package.xml
+++ b/package.xml
@@ -16,19 +16,20 @@
   <email>ab@php.net</email>
   <active>yes</active>
  </developer>
- <date>2014-10-11</date>
- <time>18:00:00</time>
+ <date>2015-11-20</date>
+ <time>11:00:00</time>
  <version>
-  <release>4.0.7</release>
-  <api>4.0.7</api>
+  <release>4.0.8</release>
+  <api>4.0.8</api>
  </version>
  <stability>
-  <release>beta</release>
-  <api>beta</api>
+  <release>stable</release>
+  <api>stable</api>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
   - fix inconsistent member names for entries in userland
+  - fix race on ref_count
  </notes>
  <contents>
   <dir name="/">
