--- a/package.xml
+++ b/package.xml
@@ -16,11 +16,11 @@
   <email>ab@php.net</email>
   <active>yes</active>
  </developer>
- <date>2015-11-20</date>
- <time>11:00:00</time>
+ <date>2015-11-21</date>
+ <time>06:00:00</time>
  <version>
-  <release>4.0.8</release>
-  <api>4.0.8</api>
+  <release>4.0.9</release>
+  <api>4.0.9</api>
  </version>
  <stability>
   <release>stable</release>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-
+  - be consistent with APC in use of atomics, avoid surprises
  </notes>
  <contents>
   <dir name="/">
