add more stuff to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,9 @@ script:
     - phpize
     - ./configure
     - make
-    - SHOW_ONLY_GROUPS="FAIL,XFAIL,BORK,WARN,LEAK,SKIP" NO_INTERACTION=1 php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -p `phpenv which php` --show-diff --set-timeout 120
+    - php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable=1 -d apc.enable_cli=1 -p `phpenv which php` --show-diff --set-timeout 120
+    - phpize --clean
+    - phpize
+    - ./configure --disable-apcu-rwlocks
+    - make
+    - php -n run-tests.php -n -d extension_dir=./modules/ -d extension=apcu.so -d apc.enable=1 -d apc.enable_cli=1 -p `phpenv which php` --show-diff --set-timeout 120
