--- a/package.xml
+++ b/package.xml
@@ -19,8 +19,8 @@
  <date>2015-11-21</date>
  <time>06:00:00</time>
  <version>
-  <release>4.0.9</release>
-  <api>4.0.9</api>
+  <release>4.0.10</release>
+  <api>4.0.10</api>
  </version>
  <stability>
   <release>stable</release>
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  - be consistent with APC in use of atomics, avoid surprises
+  - be really consistent with APC in use of atomics, avoid surprises
  </notes>
  <contents>
   <dir name="/">
