--- a/package.xml
+++ b/package.xml
@@ -22,8 +22,8 @@
   <email>remi@php.net</email>
   <active>yes</active>
  </developer>
- <date>2015-12-02</date>
- <time>12:00:00</time>
+ <date>2015-12-07</date>
+ <time>09:00:00</time>
  <version>
   <release>5.1.2</release>
   <api>5.1.2</api>
@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- be wholly consistent with APC in use of atomics
+- be really consistent with APC in use of atomics
  </notes>
  <contents>
   <dir name="/">
