--- a/package.xml
+++ b/package.xml
@@ -22,10 +22,10 @@
   <email>remi@php.net</email>
   <active>yes</active>
  </lead>
- <date>2015-12-07</date>
- <time>09:00:00</time>
+ <date>2016-01-15</date>
+ <time>14:00:00</time>
  <version>
-  <release>5.1.3dev</release>
+  <release>5.1.3</release>
   <api>5.1.2</api>
  </version>
  <stability>
