--- a/package.xml
+++ b/package.xml
@@ -22,10 +22,10 @@
   <email>remi@php.net</email>
   <active>yes</active>
  </lead>
- <date>2016-05-12</date>
+ <date>2016-06-07</date>
  <time>12:00:00</time>
  <version>
-  <release>5.1.4</release>
+  <release>5.1.5</release>
   <api>5.1.2</api>
  </version>
  <stability>
@@ -34,9 +34,8 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- fix possible memory leak
-- fix gh#168 drop trying to return strings from shm
-- fix gh#170 do not create entries when serialization fails
+- fix version check in control panel page (gh#182, lennartwesdijk)
+- do not create null strings, palloc may fail
  </notes>
  <contents>
   <dir name="/">
@@ -143,6 +142,23 @@
   <configureoption name="enable-apcu-debug" default="no" prompt="Enable internal debugging in APCu" />
  </extsrcrelease>
  <changelog>
+  <release>
+   <date>2016-05-12</date>
+   <version>
+    <release>5.1.4</release>
+    <api>5.1.2</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- fix possible memory leak
+- fix gh#168 drop trying to return strings from shm
+- fix gh#170 do not create entries when serialization fails
+ </notes>
+  </release>
   <release>
    <date>2016-01-15</date>
    <version>
