--- a/package.xml
+++ b/package.xml
@@ -34,7 +34,10 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
--fixes gh#188: Fix Segfault in ZTS build when locking (Tyson Andre)
+- fixes gh#188: Fix Segfault in ZTS build when locking (Tyson Andre)
+- fixes gh#194: apcu_entry ttl not working
+- fixes gh#189: SegFault in apc_copy_zval
+- fixes gh#185: zend_mm_heap corrupted
  </notes>
  <contents>
   <dir name="/">
