--- a/package.xml
+++ b/package.xml
@@ -22,10 +22,10 @@
   <email>remi@php.net</email>
   <active>yes</active>
  </lead>
- <date>2016-06-07</date>
- <time>12:00:00</time>
+ <date>2016-10-06</date>
+ <time>07:00:00</time>
  <version>
-  <release>5.1.6dev</release>
+  <release>5.1.6</release>
   <api>5.1.2</api>
  </version>
  <stability>
@@ -34,10 +34,12 @@
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
+- fixes gh#19:  Hung apaches on pthread wrlocks
 - fixes gh#188: Fix Segfault in ZTS build when locking (Tyson Andre)
 - fixes gh#194: apcu_entry ttl not working
 - fixes gh#189: SegFault in apc_copy_zval
 - fixes gh#185: zend_mm_heap corrupted
+- fixes gh#190: memory leak/failed check for duplicates
  </notes>
  <contents>
   <dir name="/">
@@ -49,6 +51,8 @@
     <file name="apc_003b.phpt" role="test" />
     <file name="apc_004.phpt" role="test" />
     <file name="apc_005.phpt" role="test" />
+    <file name="apc_005b.phpt" role="test" />
+    <file name="apc_005c.phpt" role="test" />
     <file name="apc_006.phpt" role="test" />
     <file name="apc_007.phpt" role="test" />
     <file name="apc_008.phpt" role="test" />
